[package]
name = "commit-formatter"
version = "0.1.0"
authors = ["Elliot <hack00mind@gmail.com>"]
edition = "2018"
description = "A CLI tool to help you write git commit"
homepage = "https://github.com/Eliot00/commit-formatter"
repository = "https://github.com/Eliot00/commit-formatter"
keywords = ["cli", "git"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.13.0"
dialoguer = "0.7.1"

[lib]
name = "commit_formatter"
path = "src/lib.rs"
