[package]
name = "commit-formatter"
version = "0.2.0"
authors = ["Elliot <hack00mind@gmail.com>"]
edition = "2018"
description = "A CLI tool to help you write git commit"
homepage = "https://github.com/Eliot00/commit-formatter"
repository = "https://github.com/Eliot00/commit-formatter"
keywords = ["cli", "git"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.1"
dialoguer = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "commit_formatter"
path = "src/lib.rs"
