[package]
name = "commit-formatter"
version = "0.3.0"
authors = ["Elliot <hack00mind@gmail.com>"]
edition = "2024"
description = "A CLI tool to help you write git commit"
homepage = "https://github.com/Eliot00/commit-formatter"
repository = "https://github.com/Eliot00/commit-formatter"
keywords = ["cli", "git"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "commit_formatter"
path = "src/lib.rs"

[[bin]]
name = "git-cf"
path = "src/main.rs"
